--- a/src/app/components/emails/email-template/email-template.component.html
+++ b/src/app/components/emails/email-template/email-template.component.html
@@ -13,7 +13,7 @@
                 Templated is Created
                </div>
                <div class="col-auto">
-                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                 <button type="button" class="close" (click)="closeAlert($event)" data-dismiss="alert" aria-label="Close">
                   <i class="fas fa-times-circle"></i>
                  </button>
                </div>
@@ -27,7 +27,7 @@
                 Templated is Updated
                </div>
                <div class="col-auto">
-                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                 <button type="button" class="close" (click)="closeAlert($event)"  data-dismiss="alert" aria-label="Close">
                   <i class="fas fa-times-circle"></i>
                  </button>
                </div>
