updated help and support page and fixed email page notification close issue.

--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -30,7 +30,7 @@
               <div class="px-4 border-left border-dark-gray">
                 <p>	A list of available fields are provided on the right of the email draft section.</p>
                 <img src="/assets/send-email-faq.png" alt="send email faq png" class="img-fluid">
-                <p class="mt-4">To customize an email please use {{Name}} where ever you wish to add name of the recipient.
+                <p class="mt-4">To customize an email please use {{Name}<!---->} where ever you wish to add name of the recipient.
                   Similarly other information can be used.</p>
               </div>
             </mat-expansion-panel>
