--- a/src/app/components/emails/email-detail/email-detail.component.html
+++ b/src/app/components/emails/email-detail/email-detail.component.html
@@ -90,6 +90,26 @@
             <td>{{row.name}}</td>
             <td>{{row.email}}</td>
             <td>LXGIWYL56</td>
+            <td  class="hover_details">
+              <ul class="actiion_list">
+                <li>
+                  <a [routerLink]="" class="btn-orange-outline-border">Unpublish</a>
+                </li>        
+                <li>
+                  <a [routerLink]="" class="btn-orange-outline-border">Validate</a>
+                </li>
+                <li>
+                  <a [routerLink]="" class="btn-orange-outline-border">Download</a>
+                </li>
+                <li>
+                  <a [routerLink]="" class="btn-orange-outline-border">Release</a>
+                </li>
+                <li>
+                  <a [routerLink]="" class="btn-orange-outline-border">View</a>
+                </li>
+
+              </ul>
+            </td>
           </tr>
         </tbody>
       </table>
