--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -63,7 +63,7 @@
 
                         
                         <div class="form-group mb-0" *ngIf="step === 'login'">
-                            <p class="text-center mb-3 mt-5">Don't have an account?</p>
+                            <p class="text-center mb-3 mt-5" style="font-size: 13px; font-family: Bahnschrift; font: widge 400px;;">Don't have an account?</p>
                             <a [routerLink]="'/register'" class="btn btn-block btn-orange-outline-border btn-md">Register</a>
                         </div>
                         <div class="form-group" *ngIf="step === 'otp'">
