--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -49,7 +49,7 @@
 
                   <div class="custom-group">
                     <label>Email</label>
-                    <input class="custom-form-control" type="text" placeholder="Email" formControlName="email" disabled>
+                    <input class="custom-form-control disabled" type="text" placeholder="Email" formControlName="email" disabled>
                   </div>
 
                   <div class="custom-group">
