--- a/src/app/components/emails/emails.component.html
+++ b/src/app/components/emails/emails.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container">
   <div class="box-area">
     <div class="row">
       <div class="col-md-12 email_inwrap">
