--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -71,6 +71,11 @@ body {
   position: absolute;
   right: 0;
   margin-top: -75px;
+  z-index: 100;
+}
+
+.custom-form-control.disabled {
+color: #b7b7b9 !important;
 }
 
 .custom-form-control + label {
