--- a/src/app/components/recipients/recipients.component.html
+++ b/src/app/components/recipients/recipients.component.html
@@ -80,7 +80,7 @@
                     <ng-container *ngIf="selectedFileName; else elseTemplate">{{selectedFileName}}
                     </ng-container>
                     <ng-template #elseTemplate>
-                      No file chosen
+                      <!-- No file chosen -->
                     </ng-template>
                   </span>
                 </div>
@@ -144,7 +144,7 @@
                     <ng-container *ngIf="selectedFileName; else elseTemplate">{{selectedFileName}}
                     </ng-container>
                     <ng-template #elseTemplate>
-                      No file chosen
+                      <!-- No file chosen -->
                     </ng-template>
                   </span>
                 </div>
@@ -165,7 +165,8 @@
                 <i class="fas fa-arrow-left"></i>
               </button>
               <button class="btn btn-orange-outline" (click)="generateCertificate($event)">
-                <i class="far fa-file-alt"></i>
+                <i class="fas fa-file-alt"></i>
+                
                 Generate Certificate
               </button>
 
