--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container">
   <div class="box-area">
     <div class="row">
       <div class="col-md-12">
@@ -134,14 +134,15 @@
                         </th>
                         <td mat-cell class="hover_details" *matCellDef="let element">
                           <ul class="actiion_list">
-                            <li>
-                              <a [routerLink]="" (click)="updateTag(element.id)"
-                                class="btn-orange-outline-border">Update</a>
-                            </li>
+
                             <li>
                               <a (click)="loader = true" [routerLink]="'/Recipients/'+element.id"
                                 [queryParams]="{name:element.name}" class="btn-orange-outline-border">View
                                 Recipients</a>
+                            </li>
+                            <li>
+                              <a [routerLink]="" (click)="updateTag(element.id)"
+                                class="btn-orange-outline-border">Update</a>
                             </li>
                           </ul>
                         </td>
@@ -176,15 +177,17 @@
                           <h6>Fields  
                             <button mat-raised-button
                             matTooltip="Info about the action"
-                            matTooltipClass="example-tooltip-red"
-                            aria-label="Button that shows a red tooltip"
+                            matTooltipPosition="left"
                             class="example-button">
                       Red-tooltip Action
                     </button>
 
                           </h6>
                         </th>
-                        <td mat-cell *matCellDef="let element let rowIndex = index">{{element.name}}</td>
+                        <td  mat-cell *matCellDef="let element let rowIndex = index">
+                        
+                           <span matTooltip="Info about the action" >{{element.name}}</span>  
+                        </td>
                       </ng-container>
 
                       <ng-container matColumnDef="recipients_filled">
