--- a/src/app/components/dialog-overview/dialog-overview.component.html
+++ b/src/app/components/dialog-overview/dialog-overview.component.html
@@ -8,7 +8,7 @@
     </mat-form-field>
   </div>
   <div mat-dialog-actions class="mb-0 justify-content-end d-flex">
-    <button class="btn-orange-outline mr-2" cdkFocusInitial [disabled]="tagForm.invalid" (click)="addtag(tag.value)">Create</button>
+    <button class="btn-orange-outline mr-2" cdkFocusInitial [disabled]="tagForm.invalid" (click)="addtag(tag.value)">Add/Save</button>
     <button class="btn-orange-outline export mr-0" style="min-width: auto;" (click)="onNoClick()">Cancel</button>
   </div>
 </form>
