--- a/src/app/components/certificates/add-certificate/add-certificate.component.html
+++ b/src/app/components/certificates/add-certificate/add-certificate.component.html
@@ -12,7 +12,7 @@
                 <button style="min-width: auto;" (click)="goBack()" class="btn-orange-outline export mr-2">
                   Cancel
                 </button>
-                <button class="btn btn-orange-outline"> Request to Add
+                <button class="btn btn-orange-outline" (click)="submitForm()"> Request to Add
                 </button>
               </div>
             </div>
@@ -21,37 +21,33 @@
       </div>
       <div class="row">
         <div class="col-lg-8">
-          <form  class="profile-update-form">
-
+          <form  class="profile-update-form" [formGroup]="certificateForm">
+            <div class="alert alert-{{success ? 'success': 'danger'}} my-2" *ngIf="message">{{message}}</div>
             <div class="custom-group">
               <label>Name of Certificate </label>
-              <input class="custom-form-control" type="text" name="name" placeholder="Certificate template name">
+              <input class="custom-form-control" formControlName="certificate-name" type="text" name="certificate-name" placeholder="Certificate template name"/>
             </div>
 
             <div class="custom-group">
                 <label>Description </label>
-                <textarea class="custom-form-control" rows="10"></textarea>
+                <textarea class="custom-form-control" formControlName="description" rows="10"></textarea>
             </div>
 
             <div class="custom-group">
                 <label>Email Template Name </label>
-                <input class="custom-form-control" type="text" name="email_template_name" placeholder="Email Template Name">
+                <input class="custom-form-control" formControlName="email-template-name" type="text" name="email-template-name" placeholder="Email Template Name"/>
             </div>
   
-            <div class="upload-btn-container">
-                <input type="file" class="btn" >
-                <label for="file" class="upload-label">
+            <div class="upload-btn-container align-items-center">
+                <input type="file" accept="image/*" class="btn" #file (change)="onFileChange($event)">
+                <label for="file" class="upload-label {{certificateForm.get('file').invalid && certificateForm.get('file').touched ? 'form-invalid' : ''}}" (click)="file.click()">
                     <svg id="Group_105" data-name="Group 105" xmlns="http://www.w3.org/2000/svg" width="14" height="17.33" viewBox="0 0 14 17.33">
                         <path id="Path_60" data-name="Path 60" d="M2.41,11H4v5a1,1,0,0,0,1,1H9a1,1,0,0,0,1-1V11h1.59a1,1,0,0,0,.71-1.71L7.71,4.7a1,1,0,0,0-1.41,0L1.71,9.29A1,1,0,0,0,2.41,11Z" transform="translate(0 -4.407)" fill="#052885"/>
                         <path id="Path_62" data-name="Path 62" d="M0,1A1,1,0,0,0,1,2H13a1,1,0,0,0,0-2H1A1,1,0,0,0,0,1Z" transform="translate(14 17.33) rotate(180)" fill="#052885"/>
                       </svg>
                     Upload File
-                    <span>
-                        <ng-template #elseTemplate>
-                            No file chosen
-                        </ng-template>
-                    </span>
-                </label>
+                  </label>
+                  <span *ngIf="certificateForm.get('file').valid">{{certificateForm.get('file').value.name}}</span>
             </div>
 
           </form>
