--- a/src/app/components/emails/emails.component.html
+++ b/src/app/components/emails/emails.component.html
@@ -65,10 +65,10 @@
                           {{element.created_at|dateAgo}}
                         </td>
                         <td>
-                          {{element.subject}}
+                          {{element.emailTemplate ? element.emailTemplate.subject : element.adminEmailTemplate ? element.adminEmailTemplate.subject : null}}
                         </td>
                         <td>
-                          {{element.emailTemplate}}
+                          {{element.emailTemplate ? element.emailTemplate.name : element.adminEmailTemplate ? element.adminEmailTemplate.name : null}}
                         </td>
                         <td>
                           {{element.no_of_recipients}}
